Erste Kapitel reviewed

--- a/kapitel/Einleitung.tex
+++ b/kapitel/Einleitung.tex
@@ -1,12 +1,12 @@
 %!TEX root = ../hausarbeit.tex
 \section{Einleitung}
 
-Wer kennt sie nicht, die Waldorfschule. Die Schule, an denen die Schüler ihren Namen tanzen oder die isoterische Baumschule auf die nur Hippis gehen. In Deutschland gibt es viele Vorurteile gegen diese Schulform. Auch in meiner Stadt, in der ich aufgewachsen bin, gab es eine Waldorfschule. Ich kannte zwar niemanden, der dort unterrichtet wurde, aber trotzdem haben wir über diese unbekannten Schüler gesprochen und vor allem gelacht. 
+Wer kennt sie nicht, die Waldorfschule. Die Schule, an denen die Schüler ihren Namen tanzen oder die esoterische Baumschule auf die nur Hippies gehen. In Deutschland gibt es viele Vorurteile gegenüber dieser Schulform. Auch in meiner Stadt, in der ich aufgewachsen bin, gab es eine Waldorfschule. Ich kannte zwar Niemanden, der dort unterrichtet wurde, aber trotzdem haben wir über diese unbekannten Schüler gesprochen und vor allem gelacht. 
 
-Schaut man sich diese Schulform aber genauer an, erkennt man schnell, dass die Schüler nicht nur ihren Namen tanzen und auch keine Hippies sind. Waldorfschulen sind irgendwie ganzheitlich, die Schüler besonders sozial, musikalisch und handwerklich geschickt. Viele Eltern suchen alternativen zum staatlichen Schulsystems und melden ihre Kinder deshalb an dieser Schule an. Es wird viel Wert auf das fächerübergreifende Lernen gelegt sowie auf Motivation statt auf Leistungsdruck. 
+Schaut man sich diese Schulform aber genauer an, erkennt man schnell, dass die Schüler nicht nur ihren Namen tanzen und auch keine Hippies sind. Waldorfschulen sind irgendwie ganzheitlich, die Schüler besonders sozial, musikalisch und handwerklich geschickt. Viele Eltern suchen Alternativen zum staatlichen Schulsystems und melden ihre Kinder deshalb an dieser Schule an. Es wird viel Wert auf das fächerübergreifende Lernen gelegt sowie auf Motivation statt auf Leistungsdruck. 
 
-Rudolf Steiner gründete 1919 die erste Waldorfschule. Über Sinn und Unsinn siner Reformpädagogik kann man sich auch heute noch streiten. Kritiker sehen die Wissensvermittlung zu kurz kommen, Befürworter loben dagegen, dass die Schüler fürs Leben und nicht nur für die Zeugnisse lernen. Aufgrund von vielen Initiativkriesen zur Begründung von Waldofschulen werden immer mehr dieser alternativen Schulen gegründet. Der Erfolg spricht also für sich und man muss einsehen, dass man diese Pädagogikform nicht mehr ignorieren kann und ausdrücklich thematisieren muss. 
+Rudolf Steiner gründete 1919 die erste Waldorfschule. Über Sinn und Unsinn seiner Reformpädagogik kann man sich auch heute noch streiten. Kritiker sehen die Wissensvermittlung zu kurz kommen, Befürworter loben dagegen, dass die Schüler fürs Leben und nicht nur für die Zeugnisse lernen. Aufgrund von vielen Initiativkreisen zur Begründung von Waldofschulen werden immer mehr dieser alternativen Schulen gegründet. Der Erfolg spricht also für sich und man muss einsehen, dass man diese Pädagogikform nicht mehr ignorieren kann und ausdrücklich thematisieren muss. 
 
-Inzwischen gibt es bereits mehrere empirische Studien zur Waldorfpädagogik. Wie schneidet diese im Vergleich zu Regelschulen ab? Hält die Praxis, was Steiner einst erreichen wollte? Was wurde aus ehemaligen Waldorfschülern? Diese und weitere Fragen sollen in den unterschiedlichen Studien beantwortet werden. Dennoch sollte man diese auch kritisch hinterfragen. Nicht immer ist das sogenannte schwarz/weiß sehen möglich. 
+Inzwischen gibt es bereits mehrere empirische Studien zur Waldorfpädagogik. Wie schneidet diese im Vergleich zu Regelschulen ab? Hält die Praxis, was Steiner einst erreichen wollte? Was wurde aus ehemaligen Waldorfschülern? Diese und weitere Fragen sollen in den unterschiedlichen Studien beantwortet werden. Dennoch sollte man diese auch kritisch hinterfragen. Nicht immer ist das sogenannte schwarz/weiss sehen möglich. 
 
 In der folgenden Hausarbeit möchte ich mich deshalb mit der empirischen Studie zur Bildung und Lebensgestaltung ehemaliger Waldorfschüler von Heiner Bartz und Dirk Randoll auseinandersetzen und hinterfragen. Zu Beginn werde ich etwas näher auf die Biographie Rudolf Steiners, den Begründer der Waldorfpädagogik, eingehen. Um zu verstehen, wie die Waldorfschulen aufgebaut sind, werde ich darauffolgend deren Entstehungsgeschichte und die heutige Umsetzung und Organisation erläutern. Zum Schluss werde ich die Wirkung der Waldorfpädagogik im Licht der Empirie darstellen.
