--- a/kapitel/Empirische_Studie.tex
+++ b/kapitel/Empirische_Studie.tex
@@ -5,26 +5,30 @@
 
 % subsection empirische_forschung_an_waldorfschulen (end)
 
-Seit nunmehr gut 90 Jahren ist die Waldorfpädagogik mit stetigem Wachstum in Detuschland vertreten. Dennoch weist sie eine ca. 80-jährige Empirieabstinenz auf. In den Sozialwissenschaften wurden im Zuge der empirischen Wende\footnote{Der empirische Wendepunkt in der Erziehungswissenschaft begann mit der internationalen Studie PISA der OECD 2000, bzw. bereits 1996 mit den Timss-Studien der IEA für Mathematik. Seither werden Schüler vermessen, in Kompetenzstufen eingeordnet und in Bildungsstandards normiert. \citep[Vgl.][]{arp11}} eine große Zahl von Forschungsarbeiten durchgeführt und publiziert. Diese beschäftigten sich mit Fragen der Erziehung und Bildung, zu den Bedingungen der Prozesse schulischen Lernens etc. Im waldorfpädagogischen Zusammenhang findet man in dieser Hinsicht aber vergleichsweise wenig. Der Bund der freien Waldorfschulen hat sich damals z.B. gegen eine Teilnahme an der PISA Studie entschieden, da \enquote{eine utilitaristische sowie eine auf Leistung und Wettbewerb ausgerichtete Bildung eher fremd ist}. \citep[Vgl.][s.127ff]{paschen10}  Die einzelnen Schulen konnten allerdings selber entscheiden, ob sie daran teilnehmen wollen. 
+Seit nunmehr gut 90 Jahren ist die Waldorfpädagogik mit stetigem Wachstum in Deutschland vertreten. Dennoch weist sie eine ca. 80-jährige Empirieabstinenz auf. In den Sozialwissenschaften wurden im Zuge der empirischen Wende\footnote{Der empirische Wendepunkt in der Erziehungswissenschaft begann mit der internationalen Studie PISA der OECD 2000, bzw. bereits 1996 mit den Timss-Studien der IEA für Mathematik. Seither werden Schüler vermessen, in Kompetenzstufen eingeordnet und in Bildungsstandards normiert. \citep[Vgl.][]{arp11}} eine große Zahl von Forschungsarbeiten durchgeführt und publiziert. Diese beschäftigten sich mit Fragen der Erziehung und Bildung, zu den Bedingungen der Prozesse schulischen Lernens etc. Im waldorfpädagogischen Zusammenhang findet man in dieser Hinsicht aber vergleichsweise wenig. Der Bund der freien Waldorfschulen hat sich damals z.B. gegen eine Teilnahme an der PISA Studie entschieden, da \enquote{eine utilitaristische sowie eine auf Leistung und Wettbewerb ausgerichtete Bildung eher fremd ist}. \citep[Vgl.][s.127ff]{paschen10}  Die einzelnen Schulen konnten allerdings selber entscheiden, ob sie daran teilnehmen wollen.
+
+\todo{'Dennoch weist sie eine ca. 80-jährige Empirieabstinenz auf.' würde ich umformulieren, etwa so: 'Dennoch wurde ca. 80 Jahre lang keine empirische Studie zu ihren Auswirkungen durchgeführt.' 'Empirieabstinenz' hört sich komisch an :)}
 
 An was kann es liegen, dass es so wenige empirische Studien zur Waldorfpädagogik gibt? \cite[S. 127f]{paschen10} nennt dafür folgende ausschlaggebende Gründe:
 
 	\begin{itemize}
-    	\item Um der eigenen Reputation keine Schäden hinzuzufügen, wollen sich die Forscher nicht mit den anthropologischen Grundlagen der Waldorfpädagogik auseinander setzen, da diese zuweilen als unwissenschaftlich gelten
+    	\item Um der eigenen Reputation keine Schäden hinzuzufügen, wollen sich die Forscher nicht mit den anthropologischen Grundlagen der Waldorfpädagogik auseinander setzen, da diese zuweilen als unwissenschaftlich gelten.
 
-    	\item Steiners Anweisungen zufolge soll jeder Waldorfleherer bestrebt sein, regelmäßig über seine eigene Praxis nachzudenken. Deshalb wird vielerorts davon ausgegangen, dass bereits genügend Praxisforschung durchgeführt wird.
+    	\item Steiners Anweisungen zufolge soll jeder Waldorflehrer bestrebt sein, regelmäßig über seine eigene Praxis nachzudenken. Deshalb wird vielerorts davon ausgegangen, dass bereits genügend Praxisforschung durchgeführt wird.
 
     	\item Bisher gibt es in der Waldorfschulbewegung nicht viele Personen, die genügend forschungsmethodisches Wissen in den empirischen Sozialwissenschaften haben. Dadurch hat sich in der Vergangenheit kein größeres Bewusstsein für adäquate Fragestellungen entwickelt. 
 
-    	\item Bei Traditionalisten gelten die Äußerungen und Empfehlungen Rudolf Steiners zu Fragen der Erziehung und Bildung als unhinterfragbar. Auch nach Meinung vieler Anhänger bedarf die Waldorfpädagogik keiner kritisch-rationalen oder gar empirischen Auseinandersetzung, da es ja eine geisteswissenschaftlich begründete Pädagogik ist. 
+    	\item Bei Traditionalisten gelten die Äußerungen und Empfehlungen Rudolf Steiners zu Fragen der Erziehung und Bildung als unhinterfragbar. Auch nach Meinung vieler Anhänger bedarf die Waldorfpädagogik keiner kritisch-rationalen oder gar empirischen Auseinandersetzung, da es ja eine geisteswissenschaftlich begründete Pädagogik ist.
     \end{itemize}
 
-Erst vor ca. zehn Jahren hat sich die Waldorfbewegung gegenüber dem empirischen Paradigma geöffnet. Der Anstoß kam allerdings von außen, weshalb dies erstmal mit großer Skepsis und Zurückhaltung geschah. Die Öffnung aus einer inneren Überzeugung heraus fehlte. Bestrebungen z.B. durch die Alanus Hochschule in Alfter\footnote{Die Alanus Hochschule ist eine staatlich anerkannte Privathochschule für Kunst und Gesellschaft. Sie bietet verschiedene Möglichkeiten der Qualifizierung von zukünftigen und tätigen Waldorflehrern an. \citep[Vgl.][]{alanus13}} fördern nun den Austausch zw. Waldorfpädagogik und Erziehungswissenschaft. In deren \enquote{Arbeitskreis Empirirsche Forschung Waldorfpädagogik} werden zweimal im Jahr geplante, laufende und abgeschlossenen Forschungsarbeiten zu waldorfpädagogischen Fragen von Experten der Waldorfschulbewegung und verschiedener Universitäten vorgestellt und diskutiert.  \citep[Vgl.][S. 128]{paschen10}
+    \todo{'unhinterfragbar' hört sich komisch an, besser wäre nicht hinterfragbar. Hmm, 'hinterfragbar' hört sich eigentlich auch komisch an.}
+
+Erst vor ca. zehn Jahren hat sich die Waldorfbewegung gegenüber dem empirischen Paradigma geöffnet. Der Anstoß kam allerdings von außen, weshalb dies erst mit großer Skepsis und Zurückhaltung geschah. Die Öffnung aus einer inneren Überzeugung heraus fehlte. Bestrebungen z.B. durch die Alanus Hochschule in Alfter\footnote{Die Alanus Hochschule ist eine staatlich anerkannte Privathochschule für Kunst und Gesellschaft. Sie bietet verschiedene Möglichkeiten der Qualifizierung von zukünftigen und tätigen Waldorflehrern an. \citep[Vgl.][]{alanus13}} fördern nun den Austausch zwischen Waldorfpädagogik und Erziehungswissenschaft. In deren \enquote{Arbeitskreis Empirische Forschung Waldorfpädagogik} werden zweimal im Jahr geplante, laufende und abgeschlossenen Forschungsarbeiten zu waldorfpädagogischen Fragen von Experten der Waldorfschulbewegung und verschiedener Universitäten vorgestellt und diskutiert.  \citep[Vgl.][S. 128]{paschen10}
+
+\todo{Oft (oder immer?) schreibst du einen Satz mit Punkt am Ende, dann die Literaturangabe mit Vgl...\\z.B. so: ...Universitäten vorgestellt und diskutiert.  \citep[Vgl.][S. 128]{paschen10}\\Macht man das nicht eher so:\\ ... Universitäten vorgestellt und diskutiert, \citep[vgl.][S. 128]{paschen10}.\\ Also mit Komma am Ende des Satzes und dann das vgl. ...\\wobei das vgl. auch außerhalb der eckigen Klammern ist.}
 
 \subsection{Absolventen von Waldorfschulen - Eine empirische Studie zu Bildung und Lebensgestaltung ehemaliger Waldorfschüler} % (fold)
 \label{Studie}
-
-% subsection subsection_name (end)
 
 Interessant ist die Frage, wie wirksam die Pädagogik Steiners wirklich ist. Das Charakteristikum der Waldorfpädagogik ist ja die Inanspruchnahme nachhaltiger Wirkungen im Blick auf eine erfolgreiche Lebensgestalung. \citet[][S. 13]{randoll07} beschreiben die gelingende Lebensgestaltung wie folgt: \enquote{Von der Freude am beruflichen Engagement, über Verantwortungsbewusstsein für Gesellschaft und Umwelt bis hin zu positiven Einflüssen auf Lebensführung und Gesundheit im Alter reichen die Wirkungserwartungen}.
 
