Jeder Satz steht nun in eigener Zeile

--- a/kapitel/Empirische_Studie.tex
+++ b/kapitel/Empirische_Studie.tex
@@ -30,51 +30,117 @@ Erst vor ca. zehn Jahren hat sich die Waldorfbewegung gegenüber dem empirischen
 \subsection{Absolventen von Waldorfschulen - Eine empirische Studie zu Bildung und Lebensgestaltung ehemaliger Waldorfschüler} % (fold)
 \label{Studie}
 
-Interessant ist die Frage, wie wirksam die Pädagogik Steiners wirklich ist. Das Charakteristikum der Waldorfpädagogik ist ja die Inanspruchnahme nachhaltiger Wirkungen im Blick auf eine erfolgreiche Lebensgestalung. \citet[][S. 13]{randoll07} beschreiben die gelingende Lebensgestaltung wie folgt: \enquote{Von der Freude am beruflichen Engagement, über Verantwortungsbewusstsein für Gesellschaft und Umwelt bis hin zu positiven Einflüssen auf Lebensführung und Gesundheit im Alter reichen die Wirkungserwartungen}.
+Interessant ist die Frage, wie wirksam die Pädagogik Steiners wirklich ist. Das Charakteristikum der Waldorfpädagogik ist ja die Inanspruchnahme nachhaltiger Wirkungen im Blick auf eine erfolgreiche Lebensgestalung.
+\citet[][S. 13]{randoll07} beschreiben die gelingende Lebensgestaltung wie folgt: \enquote{Von der Freude am beruflichen Engagement, über Verantwortungsbewusstsein für Gesellschaft und Umwelt bis hin zu positiven Einflüssen auf Lebensführung und Gesundheit im Alter reichen die Wirkungserwartungen}.
 
-Die Studie \enquote{Absolventen von Waldorfschulen - Eine empirische Studie zu Bildung und Lebensgestaltung ehemaliger Waldorfschüler} will herausfinden, ob sich Anhaltspunkte für die Verwirklichung der oben genannten Erwartungen finden lassen. Ziel der Studie war es, gesicherte Resultate zu erhalten, wie der Besuch von Waldorfschulen sich auf die Schüler ausgewirkt hat und was sie heute über diese Schulform denken. Die Studie wurde unter der Leitung von Professor Heiner Barz von der Heinrich Heine Universität Düsseldorf und von Professor Dirk Randoll von der Alanus Hochschule Alfter durchgeführt. Für die Untersuchung wurden ehemalige Waldorfschüler dreier Altersgruppen eingehend befragt. Es werden Berufskarrieren, Lebensorientierung, Religion und Gesundheit alnalysiert. Die Schüler waren zum Zeitpunkt der Erhebung (2005/06) 62-66, 50-59 und 30-37 Jahre alt.   \citep[Vgl.][]{randoll07, paschen10}
+Die Studie \enquote{Absolventen von Waldorfschulen - Eine empirische Studie zu Bildung und Lebensgestaltung ehemaliger Waldorfschüler} will herausfinden, ob sich Anhaltspunkte für die Verwirklichung der oben genannten Erwartungen finden lassen.
+Ziel der Studie war es, gesicherte Resultate zu erhalten, wie der Besuch von Waldorfschulen sich auf die Schüler ausgewirkt hat und was sie heute über diese Schulform denken.
+Die Studie wurde unter der Leitung von Professor Heiner Barz von der Heinrich Heine Universität Düsseldorf und von Professor Dirk Randoll von der Alanus Hochschule Alfter durchgeführt. 
+Für die Untersuchung wurden ehemalige Waldorfschüler dreier Altersgruppen eingehend befragt. 
+Es werden Berufskarrieren, Lebensorientierung, Religion und Gesundheit alnalysiert. 
+Die Schüler waren zum Zeitpunkt der Erhebung (2005/06) 62-66, 50-59 und 30-37 Jahre alt.   \citep[Vgl.][]{randoll07, paschen10}
 
-Die Erfassung von Veränderungen innerhalb der Waldorfschüler sowie unterschiedlichste Vergleiche zwischen der Population ehemaliger Waldorfschüler und der Grundgesamtheit ihrer gleichaltrigen Mitmenschen konnte durch die ausführliche standardisierte Befragungen dieser drei verschiedenen Absolventengenerationen ermöglicht werden. Durch den Rückblick der Ehemaligen kristalisieren sich Stärken und Schwächen der von ihnen erlebten Waldorfpädagogik heraus. Zum Beispiel das Bevorzugen und Vernachlässigen von Interessensdomänen oder die Gefahr der Abschottung nach außen hin, also alles, was nicht die Waldorfgemeinschaft betrifft.  \citep[Vgl.][S. 12]{randoll07}
+Die Erfassung von Veränderungen innerhalb der Waldorfschüler sowie unterschiedlichste Vergleiche zwischen der Population ehemaliger Waldorfschüler und der Grundgesamtheit ihrer gleichaltrigen Mitmenschen konnte durch die ausführliche standardisierte Befragungen dieser drei verschiedenen Absolventengenerationen ermöglicht werden. 
+Durch den Rückblick der Ehemaligen kristalisieren sich Stärken und Schwächen der von ihnen erlebten Waldorfpädagogik heraus.
+Zum Beispiel das Bevorzugen und Vernachlässigen von Interessensdomänen oder die Gefahr der Abschottung nach außen hin, also alles, was nicht die Waldorfgemeinschaft betrifft.  \citep[Vgl.][S. 12]{randoll07}
 
 \subsection{Hauptergebnisse zur Studie von Barz und Randoll} % (fold)
 \label{sub:hauptergebnisse}
 
 % subsection hauptergebnisse_zur_studie_zu_bildung_und_lebensgestaltung_ehemaliger_waldorfsch_ler (end)
 
-Die Ergbnisse beziehen sich auf relativ weit zurückliegende Schulerfahrungen. Der jüngste Jahrgang der Befragung verließ spätestens 1994 die Schule. Da sich die Waldorfpädagogik aber auf das von Steiner zurückgehende Erziehungs- und Unterrichtskonzept gründet, spielt dieser Einwand kaum eine Rolle. Denn demnach besitzt die Waldorfpädagogik ein zeitlos gültiges und von kurzfristigen pädagogischen Moden unabhängiges Bezugssystem. \citep[Vgl.][S. 16]{randoll07}
+Die Ergbnisse beziehen sich auf relativ weit zurückliegende Schulerfahrungen. 
+Der jüngste Jahrgang der Befragung verließ spätestens 1994 die Schule. 
+Da sich die Waldorfpädagogik aber auf das von Steiner zurückgehende Erziehungs- und Unterrichtskonzept gründet, spielt dieser Einwand kaum eine Rolle. 
+Denn demnach besitzt die Waldorfpädagogik ein zeitlos gültiges und von kurzfristigen pädagogischen Moden unabhängiges Bezugssystem. \citep[Vgl.][S. 16]{randoll07}
 
 \subsubsection{Die Berufswahl}
 \label{subsub:Berufswahl}
 
-Für die Studie untersuchten Anne Bonhoeffer und Michael Brater die Aspekte des gelernten Berufs sowohl der Befragten als auch deren Eltern. In \citet[][S. 16f]{randoll07} werden folgende Ergebnisse der Studie genannt: Der am häufigsten angegebene Beruf sowohl bei den ehemaligen Schülern als auch bei den Eltern ist Lehrer. Interessant dabei ist, dass die Personen zumeist Lehrer an staatlichen Schulen geworden sind. 15,5\% der Mütter sind Lehrerinnen, davon aber nur 1,5\% an Waldorfschulen. Bei den Vätern gaben 14,2\% den Beruf des Lehrers an und nur 1,4\% davon an Waldorfschulen. Fast ein fünftel der jüngeren Waldofschüler stammt demnach aus einem Lehrerhaushalt. Der hohe Prozentsatz der Lehrer an staatlichen Schulen zeigt, dass die Eltern dieser Schulform nicht vertrauen und ihre Kinder deshalb auf alternative Schulen, wie z.B. die Waldorfschule schicken.
+Für die Studie untersuchten Anne Bonhoeffer und Michael Brater die Aspekte des gelernten Berufs sowohl der Befragten als auch deren Eltern. 
+In \citet[][S. 16f]{randoll07} werden folgende Ergebnisse der Studie genannt: Der am häufigsten angegebene Beruf sowohl bei den ehemaligen Schülern als auch bei den Eltern ist Lehrer. 
+Interessant dabei ist, dass die Personen zumeist Lehrer an staatlichen Schulen geworden sind. 
+15,5\% der Mütter sind Lehrerinnen, davon aber nur 1,5\% an Waldorfschulen. 
+Bei den Vätern gaben 14,2\% den Beruf des Lehrers an und nur 1,4\% davon an Waldorfschulen. 
+Fast ein fünftel der jüngeren Waldofschüler stammt demnach aus einem Lehrerhaushalt. 
+Der hohe Prozentsatz der Lehrer an staatlichen Schulen zeigt, dass die Eltern dieser Schulform nicht vertrauen und ihre Kinder deshalb auf alternative Schulen, wie z.B. die Waldorfschule schicken.
 
-Von den ehemaligen Schülern sind dann wiederum 14,6\% Lehrer geworden. In der Stichprobe ist der Anteil an Lehrern fünf mal so hoch wie in der restlichen Bevölkerung. Die Differenz ist bei Ärzten und Apothekern (7,7\%) sowie geistes- und naturwissenschaftlichen Berufen (9,5\%) noch höher. Während man erkennen kann, dass der Beruf des Lehrers etwas rückläufig ist, hat sich die Quote weiterer gesundheitlicher Berufe wie Masseur, Krankengymnast oder auch Krankenschwester deutlich erhöht. Die Quote von ehemaligen Waldorfschülern, die eine Akademikerlaufbahn einschlagen ist mit 46,8\% beträchtlich. 68,7\% davon haben die (Fach-)Hochschulreife erworben. Bei den Vätern ehemaliger Waldorfschüler hatten 40\% einen Akademikertitel. Im Vergleich zum Bundesdurchschnitt von 12\% (Stand 2004) ist auch dieser Anteil enorm hoch. Sehr selten schlugen die Schüler eine Berufslaufbahn in der Gruppe der Warenkaufleute und Bürofachkräfte ein. Dies deutet auf eine wirtschaftsferne berufliche Orientierung hin. Aufgrund der in der Studie von Barz und Randall präsentierten Daten kann man die Waldorfschule als \enquote{Schule des Bildungsbürgertums} bezeichnen. \citep[][S. 17]{randoll07} 
+Von den ehemaligen Schülern sind dann wiederum 14,6\% Lehrer geworden. 
+In der Stichprobe ist der Anteil an Lehrern fünf mal so hoch wie in der restlichen Bevölkerung. 
+Die Differenz ist bei Ärzten und Apothekern (7,7\%) sowie geistes- und naturwissenschaftlichen Berufen (9,5\%) noch höher. 
+Während man erkennen kann, dass der Beruf des Lehrers etwas rückläufig ist, hat sich die Quote weiterer gesundheitlicher Berufe wie Masseur, Krankengymnast oder auch Krankenschwester deutlich erhöht. 
+Die Quote von ehemaligen Waldorfschülern, die eine Akademikerlaufbahn einschlagen ist mit 46,8\% beträchtlich. 
+68,7\% davon haben die (Fach-)Hochschulreife erworben. Bei den Vätern ehemaliger Waldorfschüler hatten 40\% einen Akademikertitel. 
+Im Vergleich zum Bundesdurchschnitt von 12\% (Stand 2004) ist auch dieser Anteil enorm hoch. 
+Sehr selten schlugen die Schüler eine Berufslaufbahn in der Gruppe der Warenkaufleute und Bürofachkräfte ein. 
+Dies deutet auf eine wirtschaftsferne berufliche Orientierung hin. 
+Aufgrund der in der Studie von Barz und Randall präsentierten Daten kann man die Waldorfschule als \enquote{Schule des Bildungsbürgertums} bezeichnen. \citep[][S. 17]{randoll07} 
 
-Trotz des Strickunterrichts für Jungen und Holz- und Metallarbeiten für Mädchen sind die Geschlechterrollen in den Berufen eher klassischer Natur. Darauf deutet zumindest die Berufswahl der ehemaligen Schüler hin. Bei Lehrern und Künstlern herrscht eine weibliche Dominaz vor, während Ingenieure und z.B. auch Tischler eher von den Männern dominiert werden. Für die Berufszufriedenheit spielen der Studie zufolge die äußeren Anreize wie Prestige, Freizeit oder Einkommen eine untergeordnete Rolle. Die ehemaligen gaben an, dass die Zufriedenheit am meisten damit zusammenhinge, seine eigenen Neigungen und Interessen verwirklichen zu können, sowie die Identifikation mit der Arbeit. 
+Trotz des Strickunterrichts für Jungen und Holz- und Metallarbeiten für Mädchen sind die Geschlechterrollen in den Berufen eher klassischer Natur. 
+Darauf deutet zumindest die Berufswahl der ehemaligen Schüler hin. 
+Bei Lehrern und Künstlern herrscht eine weibliche Dominaz vor, während Ingenieure und z.B. auch Tischler eher von den Männern dominiert werden. 
+Für die Berufszufriedenheit spielen der Studie zufolge die äußeren Anreize wie Prestige, Freizeit oder Einkommen eine untergeordnete Rolle. 
+Die ehemaligen gaben an, dass die Zufriedenheit am meisten damit zusammenhinge, seine eigenen Neigungen und Interessen verwirklichen zu können, sowie die Identifikation mit der Arbeit. 
 
 \subsubsection{Die Lebensorientierung}
 \label{subsub:lebensorientierung}
 
-Im Weiteren analysierte Thomas Gensicke die zentralen Lebensorientierungen der ehemaligen Waldorfschüler. In \citet[][S. 17ff]{randoll07} werden dazu folgende Aspekte beschrieben: Lebensaspekte, die als wichtig angesehen werden, zeigen eine Grundhaltung, die sehr musisch und kulturell ambitioniert ist. Oft ist diese noch stärker, als es der Alltag gestattet, sie auszuführen. Ähnlich geht es ihnen dabei bei ehrenamtlichen Engagements und meditativen und kontemplative Bedürfnissen. In der Gesamtbevölkerung zum Vergleich werden zwischenmenschlich-emotionale Aspekte als eher unauffällig betont. Schnelle Autos fahren, Sportveranstaltungen besuchen oder Fernseh schauen werden auf der Skala der Wichtigkeit als eher mäßig  beschrieben. Gensicke teilt die ehemaligen Waldorfschüler in drei verschiedene Typen ein: 
+Im Weiteren analysierte Thomas Gensicke die zentralen Lebensorientierungen der ehemaligen Waldorfschüler. 
+In \citet[][S. 17ff]{randoll07} werden dazu folgende Aspekte beschrieben: Lebensaspekte, die als wichtig angesehen werden, zeigen eine Grundhaltung, die sehr musisch und kulturell ambitioniert ist. 
+Oft ist diese noch stärker, als es der Alltag gestattet, sie auszuführen. 
+Ähnlich geht es ihnen dabei bei ehrenamtlichen Engagements und meditativen und kontemplative Bedürfnissen. 
+In der Gesamtbevölkerung zum Vergleich werden zwischenmenschlich-emotionale Aspekte als eher unauffällig betont. 
+Schnelle Autos fahren, Sportveranstaltungen besuchen oder Fernseh schauen werden auf der Skala der Wichtigkeit als eher mäßig  beschrieben. 
+Gensicke teilt die ehemaligen Waldorfschüler in drei verschiedene Typen ein: 
 	\begin{compactitem}
 		\item Die Kulturorientierten (31\%)
 		\item Die Beziehungsorientierten (33\%)
 		\item Die Hedonisten (36\%)
 	\end{compactitem}
-Die Kulturorientierten bevorzugen anspruchsvolle kulturelle und bildungsbezogene Aktivitäten\footnote{z.B. Museum, Oper, Theater oder Lesen \citep[Vgl.][S. 17]{randoll07}}. Diese Gruppe interessiert sich am ehesten für antroposophische Themen. 22\% davon gaben sogar an, das sie praktizierende oder engagierte Antroposophen seien. Bei den Beziehungsorientierten steht das Mitmenschliche und Emotionale im Vordergrund. Sie wollen u.a. für andere Menschen da sein und es ist eine häusliche Do-it-yourself Orientierung festzustellen. Bei den Hedonisten kann man ein auf Körperlichkeit, Sport und Sexualität prägendes Einstellungsmuster erkennen. In dieser Gruppe kann man auch feststellen, dass sie dem Lebensgenuss stärker zugewand sind. Nur 1\% der Hedonisten bekennen sich zur Antroposophie. Das Alter innerhalb der drei Gruppen ist auch interessant. Man findet den Kulturorientierten Typus eher in den älteren Jahrgängen, während man den Hedonisten am ehesten in den jüngeren Jahrgängen findet. Auch die Geschlechterverteilung ist klassisch: die Hedonisten sind eher männlich besetzt (64\% der Befragten), während die beiden anderen Gruppen einen leicht weiblichen Überschuss haben. Wichtig zu erwähnen ist auch, dass 37\% der Kulturorientierten und 62\% der Hedonisten ihre Kinder \emph{nicht} auf eine Waldorfschule geben würden, während die Angaben zum Wohlbefinden auf der Waldorfschule innerhalb der Gruppen nur sehr leicht schwankt (von 87\% bis 92\%). Die Hedonisten kritisieren auch gängige Punkte wie die Vernachlässigung der Naturwissenschaften viel schärfer. 
+
+Die Kulturorientierten bevorzugen anspruchsvolle kulturelle und bildungsbezogene Aktivitäten\footnote{z.B. Museum, Oper, Theater oder Lesen \citep[Vgl.][S. 17]{randoll07}}. 
+Diese Gruppe interessiert sich am ehesten für antroposophische Themen. 
+22\% davon gaben sogar an, das sie praktizierende oder engagierte Antroposophen seien. 
+Bei den Beziehungsorientierten steht das Mitmenschliche und Emotionale im Vordergrund. 
+Sie wollen u.a. für andere Menschen da sein und es ist eine häusliche Do-it-yourself Orientierung festzustellen. 
+Bei den Hedonisten kann man ein auf Körperlichkeit, Sport und Sexualität prägendes Einstellungsmuster erkennen. 
+In dieser Gruppe kann man auch feststellen, dass sie dem Lebensgenuss stärker zugewand sind. 
+Nur 1\% der Hedonisten bekennen sich zur Antroposophie. 
+Das Alter innerhalb der drei Gruppen ist auch interessant. 
+Man findet den Kulturorientierten Typus eher in den älteren Jahrgängen, während man den Hedonisten am ehesten in den jüngeren Jahrgängen findet. 
+Auch die Geschlechterverteilung ist klassisch: die Hedonisten sind eher männlich besetzt (64\% der Befragten), während die beiden anderen Gruppen einen leicht weiblichen Überschuss haben. 
+Wichtig zu erwähnen ist auch, dass 37\% der Kulturorientierten und 62\% der Hedonisten ihre Kinder \emph{nicht} auf eine Waldorfschule geben würden, während die Angaben zum Wohlbefinden auf der Waldorfschule innerhalb der Gruppen nur sehr leicht schwankt (von 87\% bis 92\%). 
+Die Hedonisten kritisieren auch gängige Punkte wie die Vernachlässigung der Naturwissenschaften viel schärfer. 
 
 \subsubsection{Die religiöse Orientierung}
 
-Michael N. Ebertz hat sich für die Studie der religiösen Orientierung der ehemaligen Schüler gewidmet. In \citet[][S. 18f]{randoll07} werden seine Ergebnisse wie folgt zusammengefasst: In den erhobenen Stichproben wurden 31.3\% Protestanten, 9,4\% Mitglieder der Christengemeinschaft und genausoviel Katoliken gezählt. \citet[][S. 18]{randoll07} erklären den höheren Anteil an Protestanten damit, dass die Antroposophie \enquote{eine stärkere innere Affinität zum Arbeitsethos des Protestantismus hat}. Interessant dabei ist wiederum, dass in der jüngsten Altersgruppe der Anteil der Katholiken schon bei 14,6\% liegt, was wiederum zeigt, dass die Hedonisten, wie in Kapitel \ref{subsub:lebensorientierung} beschrieben, sich kaum mehr zur Antroposophie bekennen. 
+Michael N. Ebertz hat sich für die Studie der religiösen Orientierung der ehemaligen Schüler gewidmet. 
+In \citet[][S. 18f]{randoll07} werden seine Ergebnisse wie folgt zusammengefasst: In den erhobenen Stichproben wurden 31.3\% Protestanten, 9,4\% Mitglieder der Christengemeinschaft und genausoviel Katoliken gezählt. 
+\citet[][S. 18]{randoll07} erklären den höheren Anteil an Protestanten damit, dass die Antroposophie \enquote{eine stärkere innere Affinität zum Arbeitsethos des Protestantismus hat}. 
+Interessant dabei ist wiederum, dass in der jüngsten Altersgruppe der Anteil der Katholiken schon bei 14,6\% liegt, was wiederum zeigt, dass die Hedonisten, wie in Kapitel \ref{subsub:lebensorientierung} beschrieben, sich kaum mehr zur Antroposophie bekennen. 
 
-Anhand der vorliegenden Daten kann man der Waldorfschule also nicht vorwerfen, dass sie zur Antroposophie erziehe. \citet[][S. 19]{randoll07} schreiben, dass die Mehrheit der Ehemaligen ihr \enquote{indifferent oder skeptisch} gegenüber stehe. Sie gaben auch an, dass die Waldorfschule kaum eine aktive Rolle bei der Vermittlung anthroposophischer Überzeugungen spiele, sie aber nichts desto trotz eine \enquote{hohe religiöse und weltanschauliche Offenheit} besitze.
+Anhand der vorliegenden Daten kann man der Waldorfschule also nicht vorwerfen, dass sie zur Antroposophie erziehe. 
+\citet[][S. 19]{randoll07} schreiben, dass die Mehrheit der Ehemaligen ihr \enquote{indifferent oder skeptisch} gegenüber stehe. 
+Sie gaben auch an, dass die Waldorfschule kaum eine aktive Rolle bei der Vermittlung anthroposophischer Überzeugungen spiele, sie aber nichts desto trotz eine \enquote{hohe religiöse und weltanschauliche Offenheit} besitze.
 
 \subsubsection{Schulerinnerung und -beurteilung}
 \label{subsub:Erinnerung}
 
-In \citet[][S. 19f]{randoll07} bekommt man Einblicke in die Beiträge von Dirk Randoll, Heiner Barz und Sylva Panyr. Sie beschäftigten sich mit den Schulerinnerung und Schulbeurteilung der ehemaligen Waldorfschüler. Sie berichten, dass die ehemaligen Schüler sich in den Bereichen Rechtschreibung, Fremdsprachen und der Vermittlung von Fachwissen im Nachteil sehen. Jedoch finden sie sehr positiv, dass sie gelernt haben, Dinge zu hinterfragen und Zusammenhänge zu erkennen. Die ehemaligen Schüler bestätigen, dass sie sich auf der Waldorfschule größtenteils äußerst wohl gefühlt haben. Die Identifikation mit der ehemaligen Schule ist ein zentraler Befund. Die meisten betonen, dass sie dort eine \enquote{gute Grundausstattung fürs Leben} bekommen haben, wie z.B. eine positive Lebenseinstellung, ein grundlegendes Vertrauen in die eigenen Fähigkeiten, Selbständigkeit und Anpassungsfähigkeit. Sie berichten, dass sie einen guten Sinn für das soziale Miteinander entwickelt haben, welcher nicht durch \enquote{leistungsbezogene Konkurrenzgefühle} beeinträchtigt wurde. Allerdings bestätigen knapp 60\% der Ehemaligen, dass die Waldorfpädagigik zu wenig leistungsorientiert sei. Des weiteren wird häufig angegeben, dass die Waldorfschule bezüglich der ineffizienten Wissensvermittlung sowie der Ausklammerung von Leistungsaspekten eine gewisse Weltfremdheit besäße. 
+In \citet[][S. 19f]{randoll07} bekommt man Einblicke in die Beiträge von Dirk Randoll, Heiner Barz und Sylva Panyr. 
+Sie beschäftigten sich mit den Schulerinnerung und Schulbeurteilung der ehemaligen Waldorfschüler. 
+Sie berichten, dass die ehemaligen Schüler sich in den Bereichen Rechtschreibung, Fremdsprachen und der Vermittlung von Fachwissen im Nachteil sehen. 
+Jedoch finden sie sehr positiv, dass sie gelernt haben, Dinge zu hinterfragen und Zusammenhänge zu erkennen. 
+Die ehemaligen Schüler bestätigen, dass sie sich auf der Waldorfschule größtenteils äußerst wohl gefühlt haben. 
+Die Identifikation mit der ehemaligen Schule ist ein zentraler Befund. 
+Die meisten betonen, dass sie dort eine \enquote{gute Grundausstattung fürs Leben} bekommen haben, wie z.B. eine positive Lebenseinstellung, ein grundlegendes Vertrauen in die eigenen Fähigkeiten, Selbständigkeit und Anpassungsfähigkeit. 
+Sie berichten, dass sie einen guten Sinn für das soziale Miteinander entwickelt haben, welcher nicht durch \enquote{leistungsbezogene Konkurrenzgefühle} beeinträchtigt wurde. 
+Allerdings bestätigen knapp 60\% der Ehemaligen, dass die Waldorfpädagigik zu wenig leistungsorientiert sei. 
+Des weiteren wird häufig angegeben, dass die Waldorfschule bezüglich der ineffizienten Wissensvermittlung sowie der Ausklammerung von Leistungsaspekten eine gewisse Weltfremdheit besäße. 
 
-In dem Bericht wird ausßerdem hervorgehoben, dass die Erfahrungen mit den Waldorflehrern in Bezug auf das Menschliche, das Unterstützdende sowie die Sicherheit und Orientierung die durch den Klassenlehrer gegeben ist, sehr positiv empfunden wurde. Allerdings wurden hinsichtlich der fachlichen Qualitäten des öfteren Zweifel geäußert. Negative Erfahrungen gab es auch mit \enquote{dogmatischen, mit strengen oder mit bigotten Waldorfpädagogen}. Der Epochenunterricht, die 12jährige Klassengemeinschaft und der Verzicht auf Noten wurden zum größten Teil befürwortet. 
+In dem Bericht wird ausßerdem hervorgehoben, dass die Erfahrungen mit den Waldorflehrern in Bezug auf das Menschliche, das Unterstützdende sowie die Sicherheit und Orientierung die durch den Klassenlehrer gegeben ist, sehr positiv empfunden wurde. 
+Allerdings wurden hinsichtlich der fachlichen Qualitäten des öfteren Zweifel geäußert. 
+Negative Erfahrungen gab es auch mit \enquote{dogmatischen, mit strengen oder mit bigotten Waldorfpädagogen}. 
+Der Epochenunterricht, die 12jährige Klassengemeinschaft und der Verzicht auf Noten wurden zum größten Teil befürwortet. 
 
 
 
